# developer.connect

./: .gitignore  CODE_OF_CONDUCT.md  COMPLIANCE.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: apigw-api-cd.yaml  apigw-api-ci.yaml  apigw-cd.yaml  apigw-ci.yaml  apigw-ui-cd.yaml  apigw-ui-ci.yaml  developer-connect-api-cd.yaml  developer-connect-api-ci.yaml  developer-connect-ui-cd.yaml  developer-connect-ui-ci.yaml  devloper-connect-api-cd.yaml  devloper-connect-api-ci.yaml  devloper-connect-ui-cd.yaml  devloper-connect-ui-ci.yaml  test-pnpm-v11-ci.yml  test-pnpm-v11.yml
api/: .dockerignore  .env.sample  .gcloudignore  .gitignore  .pre-commit-config.yaml  COMPLIANCE.yaml  Dockerfile  README.md  pyproject.toml  wsgi.py
api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
api/devops/: vaults.env
api/devops/gcp/: clouddeploy.yaml
api/src/developer-connect-api/common/: auth.py  flags.py
api/src/developer-connect-api/resources/: org_api_keys.py
api/src/developer-connect-api/services/: api_gateway.py
api/src/developer_connect_api/common/: error.py  flags.py
api/src/developer_connect_api/resources/: org_api_keys.py
api/src/devloper-connect-api/: config.py
api/src/devloper-connect-api/common/: flags.py
api/src/devloper-connect-api/resources/: __init__.py  org_api_keys.py
api/src/sbc_apigw/: __init__.py
api/src/sbc_apigw/common/: flags.py
api/src/sbc_apigw/resources/: base.py  org_api_keys.py
api/src/sbc_apigw/services/: api_gateway.py
api/tests/: conftest.py
api/tests/unit/: __init__.py
assets/css/: main.css
components/content/: ProseA.vue  ProseH2.vue  ProseH3.vue  ProseTr.vue
content/: api-access-request.md  apis-summary.md  get-started.md
pages/: index.vue
public/: apigw-mhr-demo.postman_collection.json  apigw-nr-demo.postman_collection.json  apigw-ppr-demo.postman_collection.json  mhr-api-property-lengths.csv
web/: app.vue
web/components/: CardBase.vue
web/components/content/: ProseH4.vue  ProseHr.vue  ProseTable.vue  ProseTd.vue
web/content/: message-logging.md  pay-api.md
web/site/: .dockerignore  .env.sample  .eslintrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.config.ts  app.vue  cloudbuild.yaml  firebase.json  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
web/site/app/: app.config.ts  app.vue  error.vue
web/site/app/composables/: docPageData.ts  sbcAuth.ts  sbcBreadcrumb.ts  sbcNav.ts  surroundPages.ts
web/site/app/enums/: product-names.ts
web/site/app/layouts/: docs.vue
web/site/app/locales/: en-CA.ts
web/site/components/: ButtonCodepen.vue  ColorModeSelect.vue  LocaleSelect.vue
web/site/composables/: docPageData.ts  headingObserver.ts  routeWithoutLocale.ts  sbcAuth.ts  sbcNav.ts  surroundPages.ts
web/site/content/: analytics-report.md  api-services-faqs.md  business-api.md  mhr-api.md  pay-api.md  ppr-api.md  registry-search-api.md
web/site/devops/: deploy.sh  vaults.env
web/site/docs/: README.md
web/site/layouts/: dashboard.vue  default.vue  docs.vue  home.vue
web/site/locales/: en-CA.ts  fr-CA.ts
web/site/middleware/: requireAuth.ts
web/site/pages/: [...slug].vue  index.vue
web/site/public/: apigw-pay-demo.postman_collection.json
web/site/utils/: createContentNav.ts  handleAccordianLabel.ts  handleContentDirectoryLabel.ts
(+147 files in other folders)
