[tool.poetry]
name = "developer-connect-api"
version = "1.0.0"
description = ""
authors = ["thorwolpert <thor@wolpert.ca>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "developer_connect_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
flask = ">=3.0.2"
launchdarkly-server-sdk = ">=8.2.1"
python-dotenv = "^1.0.1"
sentry-sdk = "^2.0.0"
flask-babel = "^4.0.0"
flask-jwt-oidc = ">=0.7.0"
gunicorn = "^22.0.0"
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", rev = "master", subdirectory = "python"}
auth-api = {git = "https://github.com/bcgov/sbc-auth.git", rev = "2768c4cad589438de58f6d8669fd90952b83c938", subdirectory = "auth-api"}
typing-extensions = ">=4.12.2"

[tool.poetry.group.test.dependencies]
freezegun = "^1.5.1"
hypothesis = "^6.108.0"
pexpect = "^4.9.0"
pytest = "^7.4.4"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
faker = "^24.14.1"
lovely-pytest-docker = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
